# SemkiAI

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_examples.sh  debug.sh  run.sh
examples/generic_usage/: CMakeLists.txt  profile.sh  training  training.cu  using.cu
examples/handwritten_numbers/: CMakeLists.txt  UI.cpp  compile.sh  training.cu  using.cu
examples/handwritten_numbers/lib/pnglibcpp/: CMakeLists.txt  pnglib.cpp
src/: AI.cu  AI.cuh  DatasetParser.cpp  Perceptron.cu  SemkiAI.hpp  main.cu
src/Perceptron/: ActivationFunctions.cu  CostFunctions.cu  LearningAlgorithms.cu
src/include/: DatasetParser.h  DatasetParser.hpp  SemkiAI.hpp
src/include/Perceptron/: ActivationFunctions.hpp  CostFunctions.hpp  LearningAlgorithms.hpp
utils/: CMakeLists.txt  compile.sh  png_to_csv.cpp
utils/DatasetParser/: DatasetParser.cpp
utils/DatasetParser/include/: DatasetParser.hpp
utils/png_to_csv/: debug.sh  png_to_csv.cpp
utils/png_to_csv/pnglibcpp/: pnglib.cpp
